# SlicerUltrasound

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  LICENSE  Makefile  README.md  TESTING_CONVERSION_SUMMARY.md  pytest.ini  requirements-test.txt  run_all_tests.py  run_slicer_tests.py  validate_ci.py
.github/workflows/: codeql.yml  dependency-review.yml  pylint.yml  pytest.yml  slicer-extension-ci.yml
AdjudicateUltrasound/: AdjudicateUltrasound.py  CMakeLists.txt
AnnotateUltrasound/: AnnotateUltrasound.py  CMakeLists.txt  annotations.schema.json
AnnotateUltrasound/Resources/: annotation_labels.csv  default_labels.csv  lung_labels.csv
AnnotateUltrasound/Resources/Icons/: AnnotateUltrasound.xcf
AnnotateUltrasound/Resources/UI/: AnnotateUltrasound.ui
AnnotateUltrasound/Testing/Python/: AnnotateUltrasoundGUITest.py  AnnotateUltrasoundLogicTest.py  AnnotateUltrasoundModuleTest.py  AnnotateUltrasoundTest.py  AnnotateUltrasoundWidgetTest.py  CMakeLists.txt  test_basic.py  test_cache_clearing.py  test_dicom_loading.py  test_free_markup_nodes.py  test_line_selection_copy_paste.py  test_memory_cycling.py  test_overlays.py  test_reload_fix.py  test_update_current_frame_bug.py
AnnotateUltrasound/Testing/Python/test_data/: 0561119268_08109698.dcm  0561119268_32202817.sandra.json  3038953328_70622118.json  3038953328_70622118.tom.json  9938886735_88815303.json  9938886735_88815303.tom.json
AnnotateUltrasound/lib/: scan_conversion.py
AnnotateUltrasound/tests/: __init__.py  test_annotate_ultrasound_logic.py  test_cache_management.py  test_overlay_management.py  test_reload_functionality.py
AnonymizeUltrasound/: AnonymizeUltrasound.py  CMakeLists.txt
AnonymizeUltrasound/Resources/: default_labels.csv
AnonymizeUltrasound/Resources/UI/: AnonymizeUltrasound.ui
AnonymizeUltrasound/Testing/Python/: AnonymizeUltrasoundModuleTest.py  CMakeLists.txt
AnonymizeUltrasound/common/: debugging.py  dicom_file_manager.py  dicom_processor.py  evaluation.py  inference.py  logging.py  masking.py  overview_generator.py  progress_reporter.py
AnonymizeUltrasound/common/tests/: test_dicom_file_manager.py  test_sample.py
AnonymizeUltrasound/scripts/: README.md  auto_anonymize.py  model_eval.py  requirements-cpu.txt  requirements-gpu.txt  requirements.txt
AnonymizeUltrasound/tests/: __init__.py  test_anonymize_ultrasound_logic.py
MmodeAnalysis/: CMakeLists.txt  MmodeAnalysis.py
MmodeAnalysis/Resources/UI/: MmodeAnalysis.ui
NeedleGuide/: CMakeLists.txt  NeedleGuide.py
NeedleGuide/Resources/UI/: NeedleGuide.ui
SceneCleaner/: CMakeLists.txt  SceneCleaner.py
SceneCleaner/Resources/UI/: SceneCleaner.ui
Testing/: CMakeLists.txt  README.md
Testing/Python/: CMakeLists.txt  check_deps_installed.py  create_synthetic_dicom.py  debug_dicom_import.py  install_deps_in_slicer.py  install_module.py  run_slicer_tests.py  test_dicom_loading.py
Testing/Python/test_data/: 0561119268_08109698.andrew.json  0561119268_08109698.sandra.json  0561119268_32202817.andrew.json  0561119268_32202817.dcm
TimeSeriesAnnotation/: CMakeLists.txt  README.md  TimeSeriesAnnotation.py
TimeSeriesAnnotation/Resources/UI/: TimeSeriesAnnotation.ui
common/: BaseUltrasoundLogic.py  BaseUltrasoundWidget.py  DicomFileManager.py  DicomUtils.py  ErrorHandler.py  LabelsManager.py  MaskUtils.py  SettingsManager.py  ShortcutManager.py  UIHelpers.py  dicom_file_manager.py
common/tests/: test_dicom_file_manager.py
docs/: debug.md  debugging.md  local_dev_and_testing.md
scripts/: combine_all_files_from_tree.sh  convert_to_annotated_format_with_rater.py  copy_matching_dcm_tree.sh  merge_annotations_in_tree.py  requirements.txt  validate_annotations.py
tests/: README.md  __init__.py  test_basic.py  test_configuration.py  test_data_validation.py  test_module_integration.py
